# Fractal

./: CMakeLists.txt  README.md
shaders/: carpet.glsl  frag.glsl  julia.glsl  mandelbrot.glsl  tree.glsl  vert.glsl
sources/: CMakeLists.txt  FractalLoader.cpp  FractalLoader.hpp  Shader.cpp  Shader.hpp  main.cpp
